src/StoriesContainer/StoryBox/StoryBox.scss
//sass variables for this component
$story-background-color: white;
$story-background-color-accent: #EEE8D5;
$story-text-color: #657b83;
$story-hover-color: #CCC8BC;

.storyBoxHeadline {
    /* child positioning props*/
    margin-left: auto;
    margin-right: auto;
    width: 75%;
    overflow: show;
    /*styling (the rest of the CSS)*/
    background-color: $story-background-color;
    color: $story-text-color;
    box-sizing: border-box;
    border-left: thin solid $story-background-color-accent;
    border-right: thin solid $story-background-color-accent;
}

/*.storyBoxHeadline:hover{
    background-color: $story-hover-color;
}*/

.headlineImage{
    width: 70%;
    align: center;
    margin-left: 15%;
    margin-right: 15%;
}

.headlineTitle{
    height: 10%;
    text-align: center;
    font-size: xx-large;
    font-family: "Times New Roman", Serif, Georgia;
    font-weight: 800;
}

.headlineBlurbContainer{
    position: relative;
    height: 20%;
    width: 95%;
    margin-left: 2.5%;
    margin-right: 2.5%;
}

.headlineBlurbText{
    z-index: 0;
    height: 100%;
    width: 100%;
    font-size: larger;
    text-align: center;
}

/*.headlineBlurbFadeover{
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
    bottom: 0;
    left: 0;
    background-image: linear-gradient(to bottom, transparent, $story-background-color);
}

.storyBoxHeadline:hover .headlineBlurbFadeover{
    background-image: linear-gradient(to bottom, transparent, $story-hover-color);
}*/

.storyBoxFeatured {
    width: 20%;
    height: 40%;
    background-color: $story-background-color;
    color: $story-text-color;
}

/*.storyBoxFeatured:hover{
    background-color: $story-hover-color;
}
*/

.featuredImage {
    height: 40%;
    width: 90%;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 5%;
}

.featuredTitle {
    height: 20%;
    text-align: center;
    font-size: x-large;
    font-family: "Times New Roman", Serif, Georgia;
    font-weight: 900;
}
    
.featuredBlurbContainer{
    position: relative;
    height: 35%;
    width: 100%;
    text-align: center;
    overflow: hidden;
}

.featuredBlurbText{
    position: absolute;
    z-index: 0;
    height: 100%;
    width: 100%;
    font-size: larger;
}

.featuredBlurbFadeover{
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
    bottom: 0;
    left: 0;
    background-image: linear-gradient(to bottom, transparent, $story-background-color);
}

/*.storyBoxFeatured:hover .featuredBlurbFadeover{
    background-image: linear-gradient(to bottom, transparent, $story-hover-color);
}*/

.storyBoxNormal {
    width: 20%;
    height: 25%;
    margin-top: 2.5%;
    box-sizing: border-box;
    background-color: $story-background-color;
    border-top: thin solid $story-background-color-accent;
    color: $story-text-color;
}

/*.storyBoxNormal:hover{
    background-color: $story-hover-color;
}*/

.normalImage {
    height: 70%;
    width: 90%;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 2.5%;
}

.normalTitle {
    height: 20%;
    text-align: center;
    font-size: large;
    font-family: "Times New Roman", Serif, Georgia;
    font-weight: 600;
}
    
.normalBlurbContainer{
    position: relative;
    height: 35%;
    width: 90%;
    text-align: center;
    overflow: hidden;
}

.normalBlurbText{
    position: absolute;
    z-index: 0;
    height: 100%;
    width: 100%;
    font-size: larger;
}

/*.storyBoxNormal:hover .normalBlurbFadeover{
    background-image: linear-gradient(to bottom, transparent, $story-hover-color);
}*/

